--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ figure_01/01_download_sra_list/runinfo.csv
 figure_01/03_compile_species_observations/species_observations.csv.gz
 01_download_sra_list/runinfo.csv
 03_compile_species_observations/species_observations.csv.gz
+03_compile_species_observations/output_orzya_example_checked_sra_names_in_results.csv
